# chat-mind-rpa

./: .gitignore  1.RPA机器人方案.txt  BUILD_README.md  CONTRIBUTING.md  MANIFEST.in  README.md  build.bat  build_lib.py  config.example.yaml  install_dev.py  publish.py  pyproject.toml
docs/: api_reference.md  index.md  message_recall.md  package-lock.json  package.json  rpa_api.md  sponsor.md
docs/.vitepress/: config.mts
docs/guide/: concepts.md  configuration.md  deployment.md  dify-integration.md  faq.md  mcp-integration.md  message-handling.md  plugins.md  quick-start.md  rpa-operations.md  troubleshooting.md
examples/: message_recall_example.py
examples/simple-bot/: bot.py
scripts/: update_version_and_tag.py
src/omni_bot_sdk/: __init__.py  bot.py  models.py
src/omni_bot_sdk/clients/: minio_client.py  mqtt_client.py
src/omni_bot_sdk/common/: __init__.py  config.py  exceptions.py  queues.py
src/omni_bot_sdk/mcp/: __init__.py  app.py  dispatchers.py  protocols.py
src/omni_bot_sdk/plugins/: interface.py  plugin_manager.py  task.md
src/omni_bot_sdk/plugins/core/: __init__.py  block_empty_room_plugin.py  image_aes_plugin.py  message_recall_plugin.py  openai_bot_plugin.py  openai_bot_plugin_bak.py  plugin_interface.py  self_msg_plugin.py
src/omni_bot_sdk/rpa/: __init__.py  controller.py  image_processor.py  input_handler.py  message_recall.py  message_sender.py  ocr_processor.py  ui_helper.py  window_manager.py
src/omni_bot_sdk/rpa/action_handlers/: __init__.py  announcement_handler.py  base_handler.py  download_file_handler.py  download_image_handler.py  download_video_handler.py  forward_message_handler.py  leave_room_handler.py  pat_handler.py  recall_message_handler.py  remove_room_member_handler.py  rename_name_in_room_handler.py  rename_room_name_handler.py  rename_room_remark_handler.py  send_file_handler.py  send_image_handler.py  send_text_message_handler.py  switch_conversation_handler.py
src/omni_bot_sdk/services/: __init__.py
src/omni_bot_sdk/services/core/: __init__.py  async_plugin_runner.py  database_service.cp312-win_amd64.pyd  message_factory_service.py  message_service.py  mqtt_service.py  processor_service.py  rpa_api_service.py  rpa_service.py  user_service.py
src/omni_bot_sdk/utils/: __init__.py  fuck_zxl.cp312-win_amd64.pyd  helpers.py  logging_setup.py  mouse.py  size_config.py
src/omni_bot_sdk/weixin/: __init__.py  message_classes.py  message_factory.py
src/omni_bot_sdk/yolo/: get_model_path.py
(+25 files in other folders)
